@@ -41,6 +41,8 @@ SVN trunk (1.1.1+svn):
    * WML-generated units with "random_traits" now show the traits description
    * flags on village don't "flicker" at the end of their animations
    * really fix bug 3388, now really centering on image when clicking it
+   * tab completion now completes to smallest substring, and show possoble
+   completions
    
 Version 1.1.1:
  * campaigns
